[gd_scene load_steps=8 format=3 uid="uid://12egl2mbeuby"]

[ext_resource type="Texture2D" uid="uid://c4apqbj3lt2in" path="res://assets/battle.png" id="1_fglyu"]
[ext_resource type="Script" path="res://scenes/game/element_explanations.gd" id="2_s8mh4"]
[ext_resource type="Texture2D" uid="uid://dranj4xyt7c1c" path="res://assets/color-circle.png" id="3_j0tde"]
[ext_resource type="Script" path="res://scenes/game/hand_area.gd" id="4_ixcmi"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_weh4n"]
size = Vector2(96, 180)

[sub_resource type="CircleShape2D" id="CircleShape2D_jlu6y"]
radius = 24.0

[sub_resource type="CircleShape2D" id="CircleShape2D_yiulb"]
radius = 40.0

[node name="Game" type="CanvasLayer"]
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_fglyu")
centered = false
metadata/_edit_lock_ = true

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -1
offset_right = 320.0
offset_bottom = 180.0
mouse_filter = 2
color = Color(0.633757, 0.633757, 0.633757, 1)

[node name="InformationPanel" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InformationPanel"]
position = Vector2(272, 90)
shape = SubResource("RectangleShape2D_weh4n")
disabled = true

[node name="UserInterface" type="Control" parent="."]
custom_minimum_size = Vector2(320, 180)
layout_mode = 3
anchors_preset = 0
offset_right = 320.0
offset_bottom = 180.0
mouse_filter = 2

[node name="InformationPanel" type="Control" parent="UserInterface"]
custom_minimum_size = Vector2(96, 0)
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -96.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 4
mouse_filter = 2

[node name="ElementExplanations" type="VBoxContainer" parent="UserInterface/InformationPanel"]
layout_mode = 0
offset_right = 96.0
offset_bottom = 180.0
script = ExtResource("2_s8mh4")

[node name="CenterContainer" type="CenterContainer" parent="UserInterface/InformationPanel/ElementExplanations"]
custom_minimum_size = Vector2(96, 96)
layout_mode = 2

[node name="CenteredControl" type="Control" parent="UserInterface/InformationPanel/ElementExplanations/CenterContainer"]
layout_mode = 2
mouse_filter = 2

[node name="FusionSprite" type="Sprite2D" parent="UserInterface/InformationPanel/ElementExplanations/CenterContainer/CenteredControl"]
texture = ExtResource("3_j0tde")

[node name="PyroCircleArea" type="Area2D" parent="UserInterface/InformationPanel/ElementExplanations/CenterContainer/CenteredControl"]

[node name="PyroCollision" type="CollisionShape2D" parent="UserInterface/InformationPanel/ElementExplanations/CenterContainer/CenteredControl/PyroCircleArea"]
position = Vector2(0, -11)
shape = SubResource("CircleShape2D_jlu6y")

[node name="HydroCircleArea" type="Area2D" parent="UserInterface/InformationPanel/ElementExplanations/CenterContainer/CenteredControl"]

[node name="HydroCollision" type="CollisionShape2D" parent="UserInterface/InformationPanel/ElementExplanations/CenterContainer/CenteredControl/HydroCircleArea"]
position = Vector2(10, 5)
shape = SubResource("CircleShape2D_jlu6y")

[node name="EarthCircleArea" type="Area2D" parent="UserInterface/InformationPanel/ElementExplanations/CenterContainer/CenteredControl"]

[node name="EarthCollision" type="CollisionShape2D" parent="UserInterface/InformationPanel/ElementExplanations/CenterContainer/CenteredControl/EarthCircleArea"]
position = Vector2(-10, 5)
shape = SubResource("CircleShape2D_jlu6y")

[node name="WanedCircleArea" type="Area2D" parent="UserInterface/InformationPanel/ElementExplanations/CenterContainer/CenteredControl"]

[node name="WanedCollision" type="CollisionShape2D" parent="UserInterface/InformationPanel/ElementExplanations/CenterContainer/CenteredControl/WanedCircleArea"]
shape = SubResource("CircleShape2D_yiulb")

[node name="StrengthsMarginContainer" type="MarginContainer" parent="UserInterface/InformationPanel/ElementExplanations"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 4
theme_override_constants/margin_right = 4

[node name="StrengthsLabel" type="RichTextLabel" parent="UserInterface/InformationPanel/ElementExplanations/StrengthsMarginContainer"]
layout_mode = 2
theme_override_constants/line_separation = 2
bbcode_enabled = true
text = "TEMPLATE TEXT"

[node name="WeaknessesMarginContainer" type="MarginContainer" parent="UserInterface/InformationPanel/ElementExplanations"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 4
theme_override_constants/margin_right = 4

[node name="WeaknessesLabel" type="RichTextLabel" parent="UserInterface/InformationPanel/ElementExplanations/WeaknessesMarginContainer"]
layout_mode = 2
theme_override_constants/line_separation = 2
text = "TEMPLATE TEXT"

[node name="CardArea" type="Control" parent="UserInterface"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -52.0
offset_right = 224.0
grow_vertical = 0
mouse_filter = 2

[node name="DeckCenterer" type="CenterContainer" parent="UserInterface/CardArea"]
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
offset_right = 48.0
offset_bottom = 52.0
grow_vertical = 0

[node name="DebugButton" type="Button" parent="UserInterface/CardArea/DeckCenterer"]
layout_mode = 2

[node name="HandCenterer" type="CenterContainer" parent="UserInterface/CardArea"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -176.0
grow_horizontal = 0
grow_vertical = 2

[node name="HandArea" type="Control" parent="UserInterface/CardArea/HandCenterer"]
layout_mode = 2
mouse_filter = 2
script = ExtResource("4_ixcmi")

[connection signal="mouse_entered" from="UserInterface/InformationPanel/ElementExplanations/CenterContainer/CenteredControl/PyroCircleArea" to="UserInterface/InformationPanel/ElementExplanations" method="_on_pyro_circle_area_mouse_entered"]
[connection signal="mouse_exited" from="UserInterface/InformationPanel/ElementExplanations/CenterContainer/CenteredControl/PyroCircleArea" to="UserInterface/InformationPanel/ElementExplanations" method="_on_pyro_circle_area_mouse_exited"]
[connection signal="mouse_entered" from="UserInterface/InformationPanel/ElementExplanations/CenterContainer/CenteredControl/HydroCircleArea" to="UserInterface/InformationPanel/ElementExplanations" method="_on_hydro_circle_area_mouse_entered"]
[connection signal="mouse_exited" from="UserInterface/InformationPanel/ElementExplanations/CenterContainer/CenteredControl/HydroCircleArea" to="UserInterface/InformationPanel/ElementExplanations" method="_on_hydro_circle_area_mouse_exited"]
[connection signal="mouse_entered" from="UserInterface/InformationPanel/ElementExplanations/CenterContainer/CenteredControl/EarthCircleArea" to="UserInterface/InformationPanel/ElementExplanations" method="_on_earth_circle_area_mouse_entered"]
[connection signal="mouse_exited" from="UserInterface/InformationPanel/ElementExplanations/CenterContainer/CenteredControl/EarthCircleArea" to="UserInterface/InformationPanel/ElementExplanations" method="_on_earth_circle_area_mouse_exited"]
[connection signal="mouse_entered" from="UserInterface/InformationPanel/ElementExplanations/CenterContainer/CenteredControl/WanedCircleArea" to="UserInterface/InformationPanel/ElementExplanations" method="_on_waned_circle_area_mouse_entered"]
[connection signal="mouse_exited" from="UserInterface/InformationPanel/ElementExplanations/CenterContainer/CenteredControl/WanedCircleArea" to="UserInterface/InformationPanel/ElementExplanations" method="_on_waned_circle_area_mouse_exited"]
[connection signal="button_down" from="UserInterface/CardArea/DeckCenterer/DebugButton" to="UserInterface/CardArea/HandCenterer/HandArea" method="_on_button_button_down"]
